third_party/move/move-compiler-v2/tests/match-checks/range_type_error.exp

Diagnostics:
error: range patterns are only allowed on integer types, found `bool`
  ┌─ tests/match-checks/range_type_error.move:7:13
  │
7 │             true..false => 1,
  │             ^^^^^^^^^^^

error: range patterns are only allowed on integer types, found `S`
   ┌─ tests/match-checks/range_type_error.move:15:13
   │
15 │             1..10 => 1,
   │             ^^^^^

error: range patterns are only allowed on integer types, found `vector<u8>`
   ┌─ tests/match-checks/range_type_error.move:23:13
   │
23 │             1..10 => 1,
   │             ^^^^^
